--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "@angular/router": "~18.0.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.2",
     "@nx/angular": "19.1.0",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "mongoose": "^8.5.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.0.0",
+    "@angular-devkit/build-angular": "^18.1.3",
     "@angular-devkit/core": "~18.0.0",
     "@angular-devkit/schematics": "~18.0.0",
     "@angular-eslint/eslint-plugin": "~17.3.0",
